# stretch

./: .gitignore  README.md  dev-electron.js  index.html  main.js  package-lock.json  package.json  preload.js  vite.config.js  vite.config.mjs
.github/workflows/: portable-release.yml  release.yml
scripts/: sync-version.js
src/: App.css  App.jsx  index.css  main.jsx  tauriApi.js  version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddStreamModal.css  AddStreamModal.jsx  Player.css  Player.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  TitleBar.css  TitleBar.jsx
src/hooks/: AppFocusContext.jsx  useAdaptiveBuffer.js  useAppFocused.js  useAudioDiag.js  useStreamStats.js  useUpdateChecker.js  useWebRTC.js
