[package]
name = "stretch"
version = "2.2.0"
description = "stretch"
authors = ["nnfz"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
windows-sys = { version = "0.59", features = ["Win32_Graphics_Dwm", "Win32_UI_Controls", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation",] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
